--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 h1 {
 	color: #d2d2d2;
-	text-shadow: #5b5d5d 0 -1px 0;
+	text-shadow: #515151 0 -1px 0;
 	text-align: center;
 	font: 92px nevis-bold;
 }
@@ -17,4 +17,13 @@ p {
 
 div {
 	text-align: center;
+}
+
+a {
+	color: orange;
+	text-decoration: none;
+}
+
+a:hover {
+	text-decoration: underline;
 }
